refactor: 清理未使用代码及简化IO操作